<resources>
    <string name="app_name">Suitmedia Test Mobile</string>
    <string name="name_user">Username</string>
    <string name="email">Email</string>
    <string name="place_foto">Photo User\n</string>
    <string name="third_screen">Third Screen\n</string>
    <string name="second_screen">Second Screen</string>
    <string name="choose_a_user">Choose A User</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="welcome">Welcome\n</string>
    <string name="next">Next\n</string>
    <string name="check">Check\n</string>
    <string name="person_icon">person icon</string>
    <string name="name">Name</string>
    <string name="polindrome">Polindrome</string>
    <string name="insert_your_name">Insert Your Name</string>
    <string name="is_palindrome">Is Palindrome</string>
    <string name="not_palindrome">Not Palindrome</string>
    <string name="coba_lagi">Coba Lagi</string>
</resources>